# feline-research-monitor

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  pytest.ini  run.py
skills/finding-summary/: SKILL.md
skills/relevance-screening/: SKILL.md
skills/study-triage/: SKILL.md
skills/treatment-radar/: SKILL.md
src/feline_monitor/: __init__.py  config.py  digest.py  llm.py  logging_setup.py  ner.py  run.py  security.py  store.py  telegram.py  tracing.py
src/feline_monitor/agents/: __init__.py  radar.py  screener.py  summarizer.py
src/feline_monitor/pubmed/: __init__.py  fetch.py  mcp_client.py  mcp_server.py  query.py
tests/: test_config.py  test_digest.py  test_fetch.py  test_llm.py  test_logging_setup.py  test_ner.py  test_query.py  test_radar.py  test_run.py  test_screener.py  test_security.py  test_store.py  test_summarizer.py  test_telegram.py
