[project]
name = "feline-research-monitor"
version = "0.1.0"
description = "Multi-agent monitor for feline veterinary literature"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.83",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "defusedxml>=0.7",   # hardened XML parsing for untrusted PubMed responses (XXE/billion-laughs safe)
    "google-adk>=1.0",
    "litellm>=1.40",
    "mcp>=1.0",
]

[project.optional-dependencies]
ner = ["transformers>=4.40", "torch>=2.2"]   # v2 only; CPU is fine
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The package (feline_monitor) lives under src/ and doesn't match the project
# name (feline-research-monitor), so hatchling can't auto-detect it. Point it here.
[tool.hatch.build.targets.wheel]
packages = ["src/feline_monitor"]
